RESOLVED FIXED258013
RemoteImageBufferProxy is not able to wait its own creation confirmation
https://bugs.webkit.org/show_bug.cgi?id=258013
Summary RemoteImageBufferProxy is not able to wait its own creation confirmation
Kimmo Kinnunen
Reported 2023-06-13 02:43:02 PDT
RemoteImageBufferProxy is not able to wait its own creation confirmation Then didCreateImageBufferBackend cannot be waited correctly
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-13 04:29:04 PDT
Kimmo Kinnunen
Comment 2 2023-06-13 04:49:20 PDT
EWS
Comment 3 2023-06-26 09:55:24 PDT
Committed 265518@main (fd470b96a913): <https://commits.webkit.org/265518@main> Reviewed commits have been landed. Closing PR #14914 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.