RemoteImageBufferProxy is not able to wait its own creation confirmation https://bugs.webkit.org/show_bug.cgi?id=258013 rdar://problem/110703592

Reviewed by Simon Fraser.

Make RemoteImageBufferProxy a proper message destination.

When waiting for didCreateBackend, wait for the message for the
particular instance. Fixes the ad hoc method of waiting for 3 messages
to any instance and then stopping.

* Source/WebKit/CMakeLists.txt:
* Source/WebKit/DerivedSources-input.xcfilelist:
* Source/WebKit/DerivedSources-output.xcfilelist:
* Source/WebKit/DerivedSources.make:
* Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:
(WebKit::RemoteRenderingBackend::didCreateImageBuffer):
* Source/WebKit/SourcesCocoa.txt:
* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp:
(WebKit::RemoteImageBufferProxy::didCreateBackend):
(WebKit::RemoteImageBufferProxy::ensureBackendCreated const):
(WebKit::RemoteImageBufferProxy::flushDrawingContext):
(WebKit::RemoteImageBufferProxy::streamConnection const):
(WebKit::RemoteImageBufferProxy::didCreateImageBufferBackend): Deleted.
* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.h:
* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.messages.in: Copied from Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.messages.in.
* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
(WebKit::RemoteRenderingBackendProxy::dispatchMessage):
(WebKit::RemoteRenderingBackendProxy::dispatchSyncMessage):
(WebKit::RemoteRenderingBackendProxy::waitForDidCreateImageBufferBackend): Deleted.
(WebKit::RemoteRenderingBackendProxy::didCreateImageBufferBackend): Deleted.
* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.h:
* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.messages.in:

Canonical link: https://commits.webkit.org/265518@main