Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp
@@ -31,6 +31,7 @@
 #include "GPUConnectionToWebProcessMessages.h"
 #include "Logging.h"
 #include "PlatformImageBufferShareableBackend.h"
+#include "RemoteImageBufferProxyMessages.h"
 #include "RemoteRenderingBackendProxy.h"
 #include "WebPage.h"
 #include "WebWorkerClient.h"
@@ -91,7 +92,7 @@ public:
 
     void flush() final
     {
-        m_flushState->waitFor(RemoteDisplayListRecorderProxy::defaultSendTimeout);
+        m_flushState->waitFor(RemoteRenderingBackendProxy::defaultTimeout);
     }
 
 private:
@@ -145,12 +146,12 @@ void RemoteImageBufferProxy::backingStoreWillChange()
     prepareForBackingStoreChange();
 }
 
-void RemoteImageBufferProxy::didCreateImageBufferBackend(ImageBufferBackendHandle&& handle)
+void RemoteImageBufferProxy::didCreateBackend(ImageBufferBackendHandle&& handle)
 {
     ASSERT(!m_backend);
     if (renderingMode() == RenderingMode::Accelerated && std::holds_alternative<ShareableBitmap::Handle>(handle))
         m_backendInfo = ImageBuffer::populateBackendInfo<UnacceleratedImageBufferShareableBackend>(parameters());
-    
+
     std::unique_ptr<ImageBufferBackend> backend;
     if (renderingMode() == RenderingMode::Unaccelerated)
         backend = UnacceleratedImageBufferShareableBackend::create(parameters(), WTFMove(handle));
@@ -164,25 +165,14 @@ void RemoteImageBufferProxy::didCreateImageBufferBackend(ImageBufferBackendHandl
 
 ImageBufferBackend* RemoteImageBufferProxy::ensureBackendCreated() const
 {
-    if (m_backend)
-        return m_backend.get();
-
-    if (!m_remoteRenderingBackendProxy)
-        return nullptr;
-
-    static constexpr unsigned maximumTimeoutOrFailureCount = 3;
-    unsigned numberOfTimeoutsOrFailures = 0;
-    while (!m_backend && numberOfTimeoutsOrFailures < maximumTimeoutOrFailureCount) {
-        if (m_remoteRenderingBackendProxy->waitForDidCreateImageBufferBackend() == RemoteRenderingBackendProxy::DidReceiveBackendCreationResult::TimeoutOrIPCFailure)
-            ++numberOfTimeoutsOrFailures;
-    }
-    if (numberOfTimeoutsOrFailures == maximumTimeoutOrFailureCount) {
-        LOG_WITH_STREAM(SharedDisplayLists, stream << "RemoteImageBufferProxy " << m_renderingResourceIdentifier << " ensureBackendCreated: exceeded max number of timeouts");
-
-        auto& renderingBackendParameters = m_remoteRenderingBackendProxy->parameters();
-        RELEASE_LOG_FAULT(RemoteLayerBuffers, "[pageProxyID=%" PRIu64 ", webPageID=%" PRIu64 ", renderingBackend=%" PRIu64 "] RemoteImageBufferProxy::ensureBackendCreated - exceeded max number of timeouts waiting for backend creation for image buffer %" PRIu64,
-            renderingBackendParameters.pageProxyID.toUInt64(), renderingBackendParameters.pageID.toUInt64(), renderingBackendParameters.identifier.toUInt64(),
-            m_renderingResourceIdentifier.toUInt64());
+    if (!m_backend && m_remoteRenderingBackendProxy) {
+        auto error = streamConnection().waitForAndDispatchImmediately<Messages::RemoteImageBufferProxy::DidCreateBackend>(m_renderingResourceIdentifier, RemoteRenderingBackendProxy::defaultTimeout);
+        if (error != IPC::Error::NoError) {
+            auto& parameters = m_remoteRenderingBackendProxy->parameters();
+            RELEASE_LOG(RemoteLayerBuffers, "[pageProxyID=%" PRIu64 ", webPageID=%" PRIu64 ", renderingBackend=%" PRIu64 "] RemoteImageBufferProxy::ensureBackendCreated - waitForAndDispatchImmediately returned error: %" PUBLIC_LOG_STRING,
+                parameters.pageProxyID.toUInt64(), parameters.pageID.toUInt64(), parameters.identifier.toUInt64(), IPC::errorAsString(error));
+            return nullptr;
+        }
     }
     return m_backend.get();
 }
@@ -319,7 +309,7 @@ void RemoteImageBufferProxy::flushDrawingContext()
         return;
     }
     if (m_pendingFlush) {
-        bool success = m_pendingFlush->waitFor(RemoteDisplayListRecorderProxy::defaultSendTimeout);
+        bool success = m_pendingFlush->waitFor(RemoteRenderingBackendProxy::defaultTimeout);
         ASSERT_UNUSED(success, success); // Currently there is nothing to be done on a timeout.
         m_pendingFlush = nullptr;
     }
@@ -384,6 +374,13 @@ std::unique_ptr<SerializedImageBuffer> RemoteImageBufferProxy::sinkIntoSerialize
     std::unique_ptr<SerializedImageBuffer> ret = WTFMove(result);
     return ret;
 }
+
+IPC::StreamClientConnection& RemoteImageBufferProxy::streamConnection() const
+{
+    ASSERT(m_remoteRenderingBackendProxy);
+    return m_remoteRenderingBackendProxy->streamConnection();
+}
+
 
 RemoteSerializedImageBufferProxy::RemoteSerializedImageBufferProxy(const WebCore::ImageBufferBackend::Parameters& parameters, const WebCore::ImageBufferBackend::Info& info, const WebCore::RenderingResourceIdentifier& renderingResourceIdentifier, RemoteRenderingBackendProxy& backend)
     : m_parameters(parameters)
